--- a/Run demono.ipynb
+++ b/Run demono.ipynb
@@ -166,9 +166,9 @@
     "        # Compute the new y_lower for next plot\n",
     "        y_lower = y_upper + 10  # 10 for the 0 samples\n",
     "\n",
-    "    ax1.set_title(\"The silhouette plot for the various clusters.\")\n",
-    "    ax1.set_xlabel(\"The silhouette coefficient values\")\n",
-    "    ax1.set_ylabel(\"Cluster label\")\n",
+    "    ax1.set_title(\"Biểu đồ silhouette cho các điểm dữ liệu\")\n",
+    "    ax1.set_xlabel(\"Giá trị tham số Silhouette\")\n",
+    "    ax1.set_ylabel(\"Số cụm\")\n",
     "\n",
     "    # The vertical line for average silhouette score of all the values\n",
     "    ax1.axvline(x=silhouette_avg, color=\"red\", linestyle=\"--\")\n",
@@ -199,11 +199,11 @@
     "        ax2.scatter(c[0], c[1], marker=\"$%d$\" % i, alpha=1, s=50, edgecolor=\"k\")\n",
     "\n",
     "    ax2.set_title(\"The visualization of the clustered data.\")\n",
-    "    ax2.set_xlabel(\"Feature space for the 1st feature\")\n",
-    "    ax2.set_ylabel(\"Feature space for the 2nd feature\")\n",
+    "    ax2.set_xlabel(\"Đặc trưng không gian 1st\")\n",
+    "    ax2.set_ylabel(\"Đặc trưng không gian 2nd\")\n",
     "\n",
     "    plt.suptitle(\n",
-    "        \"Silhouette analysis for KMeans clustering on sample data with n_clusters = %d\"\n",
+    "        \"Phân tích Silhouette trong KMeans trên dữ liệu với n_clusters = %d\"\n",
     "        % n_clusters,\n",
     "        fontsize=14,\n",
     "        fontweight=\"bold\",\n",
